
=== (next) ===
CHANGED: updated to the latest Hunter
CHANGED: to disable tests & docs by default
NEW: futoin::any copying support
NEW: FTN3 ISpec and ISpecTools interfaces
NEW: futoin::ExtError class with error info

=== 0.2.1 (2018-09-23) ===
FIXED: missing optional construct()/destruct() in IMemPool::Allocator
NEW: minor refactoring of AsyncSteps internals

=== 0.2.0 (2018-09-17) ===
CHANGED: minor refactoring for cleaner code
CHANGED: refactored NextArgs to support more use cases
CHANGED: refactoring for better clang-tidy support
NEW: details::ErasedFunc helper to be used with NextArgs
NEW: IEventEmitter for FTN15 Native Event API
NEW: futoin::FatalMsg helper
NEW: FTN12 v1.13 AsyncSteps::stack() API

=== 0.1.0 (2018-09-07) ===
NEW: initial release with FTN12 AsyncSteps native C++ interfaces