@@ -5,6 +5,7 @@ CHANGED: to disable tests & docs by default
 NEW: futoin::any copying support
 NEW: FTN3 ISpec and ISpecTools interfaces
 NEW: futoin::ExtError class with error info
+NEW: to_std()/to_futoin() helpers for strings
 
 === 0.2.1 (2018-09-23) ===
 FIXED: missing optional construct()/destruct() in IMemPool::Allocator
